--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "konnekt",
+  "name": "koneckt",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,11 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^3.11.1",
+    "@apollo/client": "^3.7.7",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "express-graphql": "^0.12.0",
-    "graphql": "^15.8.0",
     "nodemon": "^2.0.20"
   }
 }
