--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cross-fetch": "^3.1.5",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "graphql": "^16.6.0",
     "nodemon": "^2.0.20"
   }
 }
