--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
+  "type": "module",
   "name": "koneckt",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon --es-module-specifier-resolution=node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@apollo/client": "^3.7.7",
+    "@babel/cli": "^7.20.7",
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
     "cross-fetch": "^3.1.5",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
