--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "express": "^4.18.2",
     "graphql": "^16.6.0",
     "linkify-html": "^4.1.0",
+    "linkify-plugin-hashtag": "^4.1.0",
+    "linkify-plugin-mention": "^4.1.0",
     "linkifyjs": "^4.1.0",
     "moment": "^2.29.4",
     "nodemon": "^2.0.20"
