--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --es-module-specifier-resolution=node server.js"
+    "start": "nodemon --es-module-specifier-resolution=node src/server.js"
   },
   "author": "",
   "license": "ISC",
