--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/cli": "^7.20.7",
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
+    "chalk": "^5.2.0",
     "cookie-parser": "^1.4.6",
     "cross-fetch": "^3.1.5",
     "ejs": "^3.1.8",
