--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
+    "lens-protocol": "^0.1.5",
     "linkify-html": "^4.1.0",
     "linkify-plugin-hashtag": "^4.1.0",
     "linkify-plugin-mention": "^4.1.0",
