--- a/package.json
+++ b/package.json
@@ -18,15 +18,20 @@
     "chalk": "^5.2.0",
     "cookie-parser": "^1.4.6",
     "cross-fetch": "^3.1.5",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
+    "ethers": "^5.7.2",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
+    "ipfs-http-client": "^60.0.0",
     "lens-protocol": "^0.1.5",
     "linkify-html": "^4.1.0",
     "linkify-plugin-hashtag": "^4.1.0",
     "linkify-plugin-mention": "^4.1.0",
     "markdown-it": "^13.0.1",
     "moment": "^2.29.4",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "omit-deep": "^0.3.0",
+    "uuid": "^9.0.0"
   }
 }
