--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@babel/cli": "^7.20.7",
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
+    "@wagmi/core": "^0.9.6",
+    "@web3modal/ethereum": "^2.1.1",
+    "@web3modal/html": "^2.1.1",
     "chalk": "^5.2.0",
     "cookie-parser": "^1.4.6",
     "cross-fetch": "^3.1.5",
